# goldenergy

./: .gitignore  LICENSE  README.md  goldenergy_tests.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/goldenergy/: const.py  goldenergy.py
src/goldenergy/models/: consumption.py  last_invoice.py  payment_owner.py
