[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "goldenergy"
authors = [{ name = "Jose Rolo", email = "ze.p.rolo@gmail.com" }]
version = "0.0.2"
description = "Python library to retrieve information from \"Goldenergy\" client portal"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["api", "goldenergy"]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp",
    "python-dateutil"
]